--- a/Miscellaneous Facts/Miscellaneous Facts.tex
+++ b/Miscellaneous Facts/Miscellaneous Facts.tex
@@ -2412,6 +2412,703 @@ P_r(\delta)=\frac{1-r^2}{(1-r)^2+2r(1-\cos \delta)}\to 0\text{ as $r\nearrow 1$ 
 \end{align*}
 and we are done $\vdone$
 \end{proof}
+\section{HW4}
+
+\begin{question}{}{}
+\includegraphics[height=3cm,width=18cm]{ahw4q1}
+\end{question}
+\begin{proof}
+Suppose $\mathcal{Y}$ is complete. Let $BL(\mathcal{X},\mathcal{Y})$ be the space of bounded linear transformation from $\mathcal{X}$ to $\mathcal{Y}$. We wish to prove 
+ \begin{align*}
+\vi{\Big(BL(\mathcal{X},\mathcal{Y}),\norm{\cdot}_{\text{op}} \Big)\text{ is complete }}
+\end{align*}
+Fix a Cauchy-sequence $\set{T_n}_{n\inn}$ in $\Big(BL(\mathcal{X},\mathcal{Y}),\norm{\cdot}_{\text{op}} \Big)$. We reduce the problem into proving 
+\begin{align*}
+\vi{\text{ $T_n$ converge to some bounded linear operator with respect to $\norm{\cdot}_\text{op}$ }}
+\end{align*}
+We first show 
+\begin{align*}
+\olive{\text{ for all $x\in \mathcal{X}$, the sequence $\set{T_nx}_{n\inn}$ converge in $\mathcal{Y}$}}
+\end{align*}
+Fix $x$. Because $\mathcal{Y}$ is complete, we can reduce the problem into showing 
+\begin{align*}
+\olive{\set{T_nx}_{n\inn}\text{ is Cauchy }}
+\end{align*}
+Fix $\epsilon $. We wish 
+\begin{align*}
+\olive{\text{ to find }N\text{ such that for all $n>m>N$ we have }\norm{T_nx-T_mx}_{\mathcal{Y}}\leq \epsilon }
+\end{align*}
+Because  $\set{T_n}_{n\inn}$ is a Cauchy-sequence in $\Big(BL(\mathcal{X},\mathcal{Y}),\norm{\cdot}_{\text{op}} \Big)$, we know there exists $N'$ such that 
+\begin{align*}
+\norm{T_n-T_m}_{\text{op}}< \frac{\epsilon }{\norm{x}_{\mathcal{X}}} \text{ for all $n>m>N'$ }
+\end{align*}
+Note that if $\norm{x}_{\mathcal{X}}=0$, then $x=0$ and the proof become trivial.\\
+
+We claim 
+\begin{align*}
+\olive{\text{ such }N'\text{ works }}
+\end{align*}
+Observe 
+\begin{align*}
+\norm{T_nx-T_mx}_\mathcal{Y}&=\norm{(T_n-T_m)x}_{\mathcal{Y}}\\
+&\leq \norm{T_n-T_m}_{\text{op}} \norm{x}_{\mathcal{X}}< \epsilon \odone
+\end{align*}
+Now, we can define a function $S:\mathcal{X}\rightarrow \mathcal{Y}$ by 
+\begin{align*}
+S(x)\triangleq \lim_{n\to \infty}T_n(x)
+\end{align*}
+We claim 
+\begin{align*}
+\vi{S \in BL(\mathcal{X},\mathcal{Y})\text{ and }T_n \to S\text{ with respect to $\norm{\cdot}_\text{op}$ }}
+\end{align*}
+Observe 
+\begin{align*}
+S(x+cy)&=\lim_{n\to \infty}T_n(x+cy)\\
+&=\lim_{n\to \infty}T_n(x)+cT_n(y)\\
+&=\lim_{n\to \infty}T_n(x)+c\lim_{n\to \infty}T_n(y)=S(x)+cS(y)
+\end{align*}
+This show $S$ is indeed linear. Now, we show 
+\begin{align*}
+\blue{S\text{ is indeed bounded }}
+\end{align*}
+In other words, we wish to show 
+\begin{align*}
+  \blue{\set{\norm{Sx}_{\mathcal{Y}}: x \in \mathcal{X}\text{ and }\norm{x}_{\mathcal{X}}=1}\text{ is bounded  }}
+\end{align*}
+Because $T_n$ is Cauchy with respect to $\norm{\cdot}_{\text{op}}$, we know $\set{\norm{T_n}_\text{op}}$ is bounded by some $M\inr^+$. We claim 
+\begin{align*}
+\blue{\sup_{\norm{x}_{\mathcal{X}}=1} \norm{Sx}_{\mathcal{Y}}\leq M+1}
+\end{align*}
+Fix $\norm{x}_{\mathcal{X}}=1$. We reduce the problem into proving  
+\begin{align*}
+  \blue{\norm{Sx}_{\mathcal{Y}}\leq M+1}
+\end{align*}
+Because $T_nx \to Sx$ by definition of $S$, we know there exists some  $k\inn$ such that $\norm{T_kx-Sx}_{\mathcal{Y}}<1$. Now, observe 
+\begin{align*}
+  \norm{Sx}_\mathcal{Y}&\leq \norm{(S-T_k)x}_{\mathcal{Y}}+\norm{T_k(x)}_\mathcal{Y}\\
+&<1+\norm{T_k}_{\text{op}}\hspace{0.5cm}(\because \norm{x}_{\mathcal{X}}=1)\\
+&\leq 1+M \bdone
+\end{align*}
+It remains to prove 
+\begin{align*}
+  \vi{\norm{T_n-S}_{\text{op}}\to 0\text{ as }n\to \infty}
+\end{align*}
+Fix $\epsilon $. We wish 
+\begin{align*}
+\vi{\text{ to find $N$ such that for all $n>N$ we have }\norm{T_n-S}_\text{op}\leq \epsilon }
+\end{align*}
+Because $T_n$ is Cauchy with respect to $\norm{\cdot}_\text{op}$, we know there exists $N'$ such that for all $m>n>N'$, we have 
+ \begin{align*}
+\norm{T_m-T_n}_\text{op}<\epsilon 
+\end{align*}
+We claim 
+\begin{align*}
+\vi{\text{ such $N'$ works }}
+\end{align*}
+Fix $\norm{x}_{\mathcal{X}}=1$ and $n>N'$. We reduce the problem into proving 
+ \begin{align*}
+   \vi{\norm{T_n(x)-S(x)}_{\mathcal{Y}}\leq \epsilon }
+\end{align*}
+Observe 
+\begin{align*}
+\norm{T_n(x)-S(x)}_\mathcal{Y}&=\norm{T_n(x)-\lim_{m\to \infty}T_m(x)}_\mathcal{Y}\\
+&=\norm{\lim_{m\to \infty}\big((T_n-T_m)(x)\big)}_{\mathcal{Y}}\\
+&=\lim_{m\to \infty} \norm{(T_n-T_m)(x)}_{\mathcal{Y}}\hspace{0.5cm}(\because \text{ $\lim_{m\to \infty}\big((T_n-T_m)(x)\big)=T_n(x)-S(x)\text{ exists }$ })\\
+&\leq \limsup_{m\to\infty} \norm{T_n-T_m}_\text{op} \leq \epsilon \vdone
+\end{align*}
+
+
+
+
+
+\end{proof}
+\begin{question}{}{}
+\includegraphics[height=3cm,width=18cm]{ahw4q2}
+\end{question}
+\begin{proof}
+See \myref{Theorem}{LOB}
+\end{proof}
+\begin{question}{}{}
+\includegraphics[height=8cm,width=18cm]{ahw4q3}
+\end{question}
+\begin{proof}
+\textbf{(Proof of Holder's Inequality)}\\
+
+We first prove 
+\begin{align*}
+\vi{\text{ when }p=1\text{ and when }q=1}
+\end{align*}
+WOLG, we 
+\begin{align*}
+\vi{\text{ only have to prove when }p=1}
+\end{align*}
+Because $\abso{g(x)}\leq \sup_{t\in [a,b]}\abso{g(t)}$ for all $x\in [a,b]$, we have
+\begin{align*}
+\int_a^b \abso{fg}dx\leq \int_a^b \abso{f}\sup_{t\in [a,b]}\abso{g(t)}dx=\norm{f}_1 \cdot \norm{g}_{\infty}\vdone
+\end{align*}
+We now prove 
+\begin{align*}
+\blue{\text{ when }p\in  (1,\infty)}
+\end{align*}
+We first prove 
+\begin{align*}
+  \brown{\text{ the special case $\norm{f}_p=0\text{ or }\norm{g}_q=0$ }}
+\end{align*}
+WOLG, suppose $\norm{f}_p=0$. From $\norm{f}_p=0$, we can deduce
+\begin{align*}
+\int_a^b \abso{f}^p dx=0
+\end{align*}
+This tell us $\abso{f}$ is $0$ almost everywhere, and give us 
+\begin{align*}
+\norm{fg}_1=\int_a^b \abso{fg}dx=0=\norm{f}_p\norm{g}_q\brown{\text{(done)}}
+\end{align*}
+Now, we come back 
+\begin{align*}
+\blue{\text{ to prove the general case where $\norm{f}_p\neq 0\neq \norm{g}_q$}}
+\end{align*}
+Applying young's inequality to $\frac{\abso{f}}{\norm{f}_p}$ and $\frac{\abso{g}}{\norm{g}_q}$, we have 
+\begin{align*}
+\frac{\abso{fg}}{\norm{f}_p\norm{g}_q}\leq \frac{1}{p}(\frac{\abso{f}}{\norm{f}_p})^p+\frac{1}{q}(\frac{\abso{g}}{\norm{g}_q})^q
+\end{align*}
+Integrating both side 
+\begin{align*} \frac{1}{\norm{f}_p\norm{g}_q} \int_a^b \abso{fg}dx&\leq \frac{1}{p\norm{f}_p^p}\int_a^b \abso{f}^pdx + \frac{1}{q\norm{g}_q^q} \int_a^b \abso{g}^qdx \\
+  &=\frac{1}{p\norm{f}_p^p}\norm{f}_p^p+\frac{1}{q\norm{g}_q^q}\norm{g}_q^q\\
+  &=\frac{1}{p}+\frac{1}{q}=1
+\end{align*}
+Multiplying $\norm{f}_p\norm{g}_q$ to both side, we now have 
+\begin{align*}
+\norm{fg}_1=\int_a^b \abso{fg}dx\leq \norm{f}_p\norm{g}_q\bdone
+\end{align*}
+\textbf{(Proof of Minkowski inequality)}
+Compute $\norm{f+g}_p^p$
+\begin{align*}
+\norm{f+g}_p^p&=\int_a^b \abso{f+g}^p dx\\
+&\leq \int_a^b \abso{f+g}^{p-1} (\abso{f}+\abso{g})dx\\
+&=\int_a^b \abso{f+g}^{p-1}\cdot \abso{f}dx+\int_a^b \abso{f+g}^{p-1}\cdot \abso{g}dx\\
+&=\norm{\abso{f+g}^{p-1}f}_{1}+ \norm{\abso{f+g}^{p-1}g}_1
+\end{align*}
+Check that $\frac{p}{p-1}\text{ and }p$ form a holder conjugate. Now use Holder's Inequality 
+\begin{align*}
+  \norm{f+g}_p^p & \leq \norm{\abso{f+g}^{p-1}f}_{1}+ \norm{\abso{f+g}^{p-1}g}_1\\
+  &\leq \norm{\abso{f+g}^{p-1}}_{\frac{p}{p-1}} \norm{f}_p+ \norm{\abso{f+g}}_{\frac{p}{p-1}} \norm{g}_p\\
+  &=(\int_a^b \abso{f+g}^p dx)^{\frac{p-1}{p}}(\norm{f}_p+\norm{g}_p)\\
+  &=\norm{f+g}_p^{p-1}(\norm{f}_p+\norm{g}_p)
+\end{align*}
+Dividing both side by $\norm{f+g}_p^{p-1}$ (note that if $\norm{f+g}_p^{p-1}=0$, then the proof become trivial),  
+\begin{align*}
+\norm{f+g}_p\leq \norm{f}_p+ \norm{g}_p
+\end{align*}
+
+
+
+\end{proof}
+\begin{question}{}{}
+\includegraphics[height=5cm,width=18cm]{ahw4q4}
+\end{question}
+\begin{proof}
+\textbf{(a)}\\
+
+Because $E$ is compact and $K$ is continuous on $E$, we know
+ \begin{align*}
+M'=\sup_E \abso{K}^2\text{ exists }
+\end{align*}
+We claim 
+\begin{align*}
+\vi{M=\sqrt{M'} \text{ suffices }}
+\end{align*}
+See 
+\begin{align*}
+\norm{Af}_2&=(\int_E \abso{Kf}^2dx)^{\frac{1}{2}}\\
+&= (\int_E \abso{K}^2 \abso{f}^2dx)^{\frac{1}{2}}\\
+&=(M'\int_E \abso{f}^2dx)^{\frac{1}{2}}=M\norm{f}_2 \vdone
+\end{align*}
+\textbf{(b)}\\
+
+We wish to prove 
+\begin{align*}
+\norm{A}\overset{\text{def}}{=}\vi{\sup_{\norm{f}_2=1}\norm{Kf}_2=\norm{K}_\infty}
+\end{align*}
+We first prove 
+\begin{align*}
+\blue{\sup_{\norm{f}_2=1}\norm{Kf}_2\leq \norm{K}_\infty}
+\end{align*}
+Fix $\norm{f}_2=1$. We reduce the problem into 
+\begin{align*}
+\blue{\text{ proving }\norm{Kf}_2\leq \norm{K}_\infty}
+\end{align*}
+Compute 
+\begin{align*}
+\norm{Kf}_2&=(\int_E \abso{K}^2 \abso{f}^2dx)^{\frac{1}{2}}\\
+&\leq (\norm{K}_\infty^{2}\int_E \abso{f}^2dx)^{\frac{1}{2}}\\
+&= \norm{K}_\infty \norm{f}_2=\norm{K}_\infty\bdone
+\end{align*}
+We now prove 
+\begin{align*}
+\olive{\sup_{\norm{f}_2= 1}\norm{Kf}_2\geq \norm{K}_\infty}
+\end{align*}
+Fix $\epsilon $. We reduce the problem into 
+\begin{align*}
+\olive{\text{ finding }f\text{ such that }\norm{f}_2=1\text{ and }\norm{Kf}_2\geq \norm{K}_\infty -\epsilon }
+\end{align*}
+Because of EVT and the fact $\abso{K}$ is continuous on the compact $E$, we know there exists a compact interval $I\subseteq E$ such that  
+\begin{enumerate}[label=(\alph*)]
+  \item $\abso{K}>\norm{K}_\infty-\epsilon $ on $I$
+\end{enumerate}
+We claim 
+\begin{align*}
+\olive{f(t)=\begin{cases}
+    (\mu (I))^{\frac{-1}{2}}& \text{ if $t\in I$ }\\
+  0& \text{ if $t\not\in I$ }
+\end{cases}\text{ suffices }}
+\end{align*}
+Compute 
+\begin{align*}
+\norm{f}_2= \big(\int_I ((\mu (I))^{\frac{-1}{2}})^2dt \big) ^{\frac{1}{2}}=1
+\end{align*}
+Compute using the fact $\abso{K}>\norm{K}_\infty-\epsilon $ on $I$, we have 
+\begin{align*}
+\norm{Kf}_2&= \Big(\int_E \abso{K}^2 \cdot \abso{f}^2dx \Big)^{\frac{1}{2}}\\
+&= \Big(\int_I \abso{K}^2\cdot \abso{f}^2dx \Big)^{\frac{1}{2}}\\
+&\geq \Big((\norm{K}_\infty -\epsilon )^2 \int_I \abso{f}^2 dx\Big)^{\frac{1}{2}}\\
+&=(\norm{K}_\infty - \epsilon )\norm{f}_2 =\norm{K}_\infty - \epsilon \odone \vdone 
+\end{align*}
+
+
+
+
+\end{proof}
+\begin{question}{}{}
+\includegraphics[height=5cm,width=18cm]{ahw4q5}
+\end{question}
+\begin{proof}
+It is quite clear that $T$ is linear. See 
+\begin{align*}
+  \big(T(f+cg) \big)(x)&=\int_0^x (f+cg)(t)dt\\
+  &=\int_0^x f(t)dt + c\int_0^x g(t)dt\\
+  &=(Tf+cTg)(x)
+\end{align*}
+We now show 
+\begin{align*}
+\vi{\norm{T}_\text{op}=1}
+\end{align*}
+In other words, we wish to show 
+\begin{align*}
+  \vi{\sup_{\norm{f}_\infty\leq 1}\norm{Tf}_{\infty}=1}
+\end{align*}
+Fix 
+\begin{align*}
+g(x)\triangleq 1
+\end{align*}
+We see that $\norm{g}_\infty\leq 1$ and 
+\begin{align*}
+  (Tg)(x)=\int_0^x dt=x
+\end{align*}
+which implies $\norm{Tg}_{\infty}=1$. This then implies 
+\begin{align*}
+\sup_{\norm{f}_\infty \leq 1}\norm{Tf}_\infty \geq 1
+\end{align*}
+We can now reduce the problem into proving 
+\begin{align*}
+\vi{\sup_{\norm{f}_\infty \leq 1}\norm{Tf}_\infty \leq 1}
+\end{align*}
+Fix $f\in \mathcal{C}[0,1]$ such that $\norm{f}_\infty\leq 1$. We reduce the problem into proving 
+\begin{align*}
+  \vi{\norm{Tf}_\infty \leq 1}
+\end{align*}
+Fix $x \in [0,1]$. We reduce the problem into proving 
+\begin{align*}
+  \vi{\abso{Tf(x)}\leq 1}
+\end{align*}
+Observe 
+\begin{align*}
+\abso{Tf(x)}&=\abso{\int_0^x f(t)dt}\\
+&\leq \int_0^x \abso{f(t)}dt\\
+&\leq \int_0^x 1dt\hspace{0.5cm}(\because \norm{f}_\infty \leq 1)\\
+&=x \leq 1\vdone
+\end{align*}
+Note that we have shown $T$ is bounded. This implies $T$ is continuous, since $T$ is a linear transformation. (See Question 2) 
+\end{proof}
+\begin{question}{}{}
+\includegraphics[height=2cm,width=18cm]{ahw4q6}
+\end{question}
+\begin{proof}
+Let $\alpha =\set{\begin{bmatrix}
+1\\
+0
+\end{bmatrix},\begin{bmatrix}
+0\\
+1
+\end{bmatrix}}$. We have
+\begin{align*}
+[T]_\alpha = \begin{bmatrix}
+  2&1\\
+  1 & 2
+\end{bmatrix}
+\end{align*}
+Compute the diagonalization 
+\begin{align*}
+\begin{bmatrix}
+T
+\end{bmatrix}_{\alpha }= \begin{bmatrix}
+1 & 1 \\
+1 & -1
+\end{bmatrix}\begin{bmatrix}
+3 & 0 \\
+0 & 1
+\end{bmatrix}\begin{bmatrix}
+1 & 1 \\
+1 & -1
+\end{bmatrix}^{-1}
+\end{align*}
+Let $P,V\in L(\R^2,\R^2)$ satisfy 
+\begin{align*}
+  [P]_\alpha = \begin{bmatrix}
+    1 & 1 \\
+    1 & -1
+  \end{bmatrix}\text{ and }[V]_\alpha = \begin{bmatrix}
+    3 & 0 \\
+    0 & 1
+  \end{bmatrix}
+\end{align*}
+Note that $\frac{1}{\sqrt{2}}P$ is an orthogonal transformation. Because orthogonal transformation preserve distance, we see that $\norm{\frac{1}{\sqrt{2}}P}_\text{op}=1$. Because $(\frac{1}{\sqrt{2}}P)^{-1}=\sqrt{2}P^{-1}$ and the invert of an orthogonal transformation is again an orthogonal transformation, we see that $\norm{\sqrt{2}P^{-1}}_\text{op}=1$.\\
+
+
+Now, from 
+\begin{align*}
+T=\frac{1}{\sqrt{2}}P\circ V\circ \sqrt{2}P^{-1} 
+\end{align*}
+We can deduce
+\begin{align*}
+\norm{T}_{\text{op}}\leq \norm{\frac{1}{\sqrt{2} }P}_{\text{op}}\norm{V}_{\text{op}}\norm{\sqrt{2}P^{-1}}_{\text{op}}= \norm{V}_{\text{op}}
+\end{align*}
+and deduce 
+\begin{align*}
+\norm{V}_\text{op}\leq \norm{\sqrt{2}P^{-1}}_\text{op}\norm{T}_\text{op}\norm{\frac{1}{\sqrt{2} }P}_\text{op}= \norm{T}_{\text{op}}
+\end{align*}
+This give us 
+\begin{align*}
+\norm{T}_{\text{op}}=\norm{V}_{\text{op}}
+\end{align*}
+Now consider $\begin{bmatrix}
+x\\
+y
+\end{bmatrix}$ such that $x^2+y^2=1$. We wish to find the maximum of 
+ \begin{align*}
+\abso{V\begin{bmatrix}
+x\\
+y
+\end{bmatrix}}
+\end{align*}
+Compute 
+\begin{align*}
+\abso{V\begin{bmatrix}
+x\\
+y
+\end{bmatrix}}=\sqrt{9x^2+y^2} 
+\end{align*}
+In other words, we wish to find the maximum of 
+\begin{align*}
+\sqrt{9x^2+y^2} \text{ when $x^2+y^2=1$ }
+\end{align*}
+Compute 
+\begin{align*}
+\sqrt{9x^2+y^2}=\sqrt{1+8x^2} 
+\end{align*}
+This implies $\sqrt{9x^2+y^2}$ is maximum when $x=\pm 1$ and the value is  $3$.\\
+
+In conclusion,  $\norm{T}_\text{op}=3$. This implies that $T$ is bounded, and further implies that  $T$ is continuous. See Question 2. 
+\end{proof}
+\begin{question}{}{}
+\includegraphics[height=3cm,width=18cm]{ahw4q7}
+\end{question}
+\begin{proof}
+We first show 
+\begin{align*}
+\vi{T_n\text{ is Cauchy in }\Big(L(\R^n,\R^n),\norm{\cdot}_\text{op} \Big)}
+\end{align*}
+Note that this suffices, since $\Big(L(\R^n,\R^n), \norm{\cdot}_\text{op} \Big)$ is complete, by Question 1.\\
+
+Fix $\epsilon $. We wish 
+\begin{align*}
+\vi{\text{ to find }N\text{ such that for all $n>m>N$ we have }\norm{T_n-T_m}_\text{op}\leq \epsilon }
+\end{align*}
+Because $\norm{T}_{\text{op}}<1$, we see the geometric series 
+\begin{align*}
+  \sum_{k=0}^{\infty} \norm{T}_{\text{op}}^k\text{ converge }
+\end{align*}
+Then by direct comparison test ($\norm{T^k}_\text{op}\leq \norm{T}_\text{op}^k$), we know 
+\begin{align*}
+\sum_{k=0}^{\infty} \norm{T^k}_{\text{op}}\text{ converges, thus Cauchy }
+\end{align*}
+Then we know 
+\begin{align*}
+\text{ there exists $N'$ such that for all  $n>m>N'$, we have }\sum_{k=m}^{n-1} \norm{T^{k}}_\text{op}<\epsilon 
+\end{align*}
+We claim 
+\begin{align*}
+\vi{\text{ such $N'$ works }}
+\end{align*}
+Fix $n>m>N'$. Observe 
+ \begin{align*}
+\norm{T_n-T_m}_\text{op}&=\norm{\sum_{k=m}^{n-1}T^k}_\text{op}\\
+&\leq \sum_{k=m}^{n-1} \norm{T^k}_\text{op}\\
+&\leq \sum_{k=m}^{n-1} \norm{T}_{\text{op}}^k \leq \epsilon  \vdone
+\end{align*}
+Now, let $S\triangleq \lim_{k\to \infty}T_k$. Note that $(1-T)\circ S=1 \implies S=(1-T)^{-1}\implies S\circ (1-T)=1$, so it suffices to just prove 
+\begin{align*}
+\blue{(1-T)\circ S=1}
+\end{align*}
+Fix $x \inr^n$. We wish to prove 
+\begin{align*}
+  \blue{(1-T)\lim_{k\to \infty}T_k(x)=x}
+\end{align*}
+Because we know $\lim_{k\to \infty}T_k(x)$ exists, and $1-T$ is continuous,  (all linear transformation in $\R^n$ is continuous, see \myref{Theorem}{LmoF}), we have
+\begin{align*}
+  (1-T)\lim_{k\to \infty}T_k(x)=\lim_{k\to \infty}(1-T)T_k(x)
+\end{align*}
+We can now reduce the problem into proving 
+\begin{align*}
+  \blue{\lim_{k\to \infty}(1-T)T_k(x)=x}
+\end{align*}
+Compute 
+\begin{align*}
+  (1-T)T_k&=T_k-T T_k\\
+  &=\sum_{n=0}^{k-1} T^n - \sum_{n=1}^{k} T^n\\
+  &=1-T^k
+\end{align*}
+This let us reduce the problem into 
+\begin{align*}
+  \blue{\lim_{k\to \infty}T^k(x)=0}
+\end{align*}
+Fix $r=\norm{T}_{\text{op}}<1$. Observe 
+\begin{align*}
+\norm{T^k(x)}_{\text{op}}\leq \norm{T}_\text{op}^k \abso{x}=r^k \abso{x} 
+\end{align*}
+Because $r^k\abso{x}\to 0$ as $k\to \infty$, this implies 
+\begin{align*}
+  \lim_{k\to \infty}\norm{T^k(x)}=0
+\end{align*}
+and implies 
+\begin{align*}
+\lim_{k\to \infty}T^k(x)=0\bdone
+\end{align*}
+
+
+\end{proof}
+\begin{question}{}{}
+\includegraphics[height=6cm,width=18cm]{ahw4q8}
+\end{question}
+\begin{proof}
+See \myref{Theorem}{ANoF}
+\end{proof}
+\section{Operator Norm}
+\begin{mdframed}
+In this section, and particularly in functional analysis, we say a function $T$ between two metric space is a  \textbf{bounded operator} if $T$ always map bounded set to bounded set. In particular, if $T$ is a linear transformation between two normed space, we say $T$ is a \textbf{bounded linear operator}.\\
+
+Suppose $\mathcal{X},\mathcal{Y}$ are two normed space over $\R\text{ or }\C$. In space $L(\mathcal{X},\mathcal{Y})$, alternatively, we can define the boundedness for each linear transformation $T$ by 
+\begin{align*}
+T\text{ is bounded } \overset{\triangle}{\iff} \exists M\inr,\forall x\in \mathcal{X}, \norm{Tx}\leq M\norm{x}
+\end{align*}
+The proof of equivalency is simple. For $(\longrightarrow )$,  $E\triangleq \set{y \in \mathcal{X}: \norm{y}=1}$ is non-empty. Clearly, $E$ is bounded. Let $M=\sup_{y\in E} \norm{Ty}$. We now have 
+\begin{align*}
+\norm{Tx}= \norm{x}\cdot\norm{T \frac{x}{\norm{x}}}\leq M\norm{x}
+\end{align*}
+For $(\longleftarrow)$, just observe $\norm{Tx-Ty}=\norm{T(x-y)}\leq M\norm{x-y}$.\\
+
+
+Here, we first show a linear transformation is continuous if and only if it is bounded. (\myref{Theorem}{LOB}) 
+\end{mdframed}
+\begin{theorem}
+\label{LOB}
+\textbf{(Liner Operator is Bounded if and only if it is Continuous)} Given two normed space $\mathcal{X},\mathcal{Y}$ over $\R\text{ or }\C$ and  $T\in L(\mathcal{X},\mathcal{Y})$, we have 
+\begin{align*}
+T\text{ is a bounded operator }\iff T\text{ is continuous on $\mathcal{X}$}
+\end{align*}
+\end{theorem}
+\begin{proof}
+$(\longrightarrow)$ We show 
+\begin{align*}
+\vi{T\text{ is Lipschitz continuous on }V}
+\end{align*}
+Because $T$ is bounded, we can let $M\inr^+$ satisfy $\norm{Tx}\leq M\norm{x}$. We see 
+\begin{align*}
+\norm{Tx-Ty}\leq \norm{T(x-y)}\leq M \norm{x-y}\vdone
+\end{align*}
+$(\longleftarrow)$\\
+
+Because $T$ is linear and continuous at $0$, we know there exists  $\epsilon $ such that 
+\begin{align*}
+\sup_{\norm{y}\leq \epsilon } \norm{Ty} \leq 1
+\end{align*}
+We claim 
+\begin{align*}
+\blue{\hspace{3cm}\norm{Tx}\leq \frac{1}{\epsilon }\norm{x}\hspace{1.5cm}(x\in \mathcal{X})}
+\end{align*}
+Fix $x\in V$. Compute 
+\begin{align*}
+\norm{Tx}= \frac{\norm{x}}{\epsilon } \bnorm{T \frac{\epsilon x}{\norm{x}}}\leq \frac{\norm{x}}{\epsilon}\bdone
+\end{align*}
+\end{proof}
+\begin{mdframed}
+Here, we introduce a new terminology, which shall later show its value. Given a set $X$, we say two metrics $d_1,d_2$ on $X$ are \textbf{equivalent}, and write $d_1\sim d_2$, if we have 
+\begin{align*}
+\exists m,M \inr^+, \forall x ,y\in X, md_1(x,y)\leq d_2(x,y) \leq Md_1(x,y)
+\end{align*}
+Now, given a fixed vector space $V$, naturally, we say two norms $\norm{\cdot}_1,\norm{\cdot}_2$ on $V$ are \textbf{equivalent} if 
+\begin{align*}
+\exists m,M \inr^+, \forall x\in X, m \norm{x}_1\leq \norm{x}_2 \leq M\norm{x}_1
+\end{align*}
+We say two metric $d_1,d_2$ on  $X$ are  \textbf{topologically equivalent} if the topology they induce on $X$ are identical.\\
+
+A few properties can be immediately spotted.  
+\begin{enumerate}[label=(\alph*)]
+  \item Our definition of $\sim$ between metrics of a fixed $X$ is an equivalence relation.
+  \item Our definition of $\sim$ between norms on a fixed $V$ is an equivalence relation.
+  \item Equivalent norms induce equivalent metrics.
+  \item Equivalent metrics are topologically equivalent. 
+\end{enumerate}
+
+We now prove that if $V$ is finite-dimensional, then all norms on  $V$ are equivalent (\myref{Theorem}{ANoF}). This property will later show its value, as used to prove that linear map of finite-dimensional domain is alwasy continuous (\myref{Theorem}{LmoF})
+\end{mdframed}
+\begin{theorem}
+\label{ANoF}
+\textbf{(All Norms on Finite-dimensional space are Equivalent)} Suppose $V$ is a finite-dimensional vector space over $\R\text{ or }\C$. Then 
+\begin{align*}
+\text{ all norms on $V$ are equivalent }
+\end{align*}
+\end{theorem}
+\begin{proof}
+Let $\set{e_1,\dots ,e_n}$ be a basis of $V$. Define $\infty$-norm $\norm{\cdot}_\infty$ on $V$ by 
+\begin{align*}
+\norm{\sum \alpha_i e_i}_{\infty}\triangleq  \max \abso{\alpha_i} 
+\end{align*}
+It is easily checked that $\norm{\cdot}_\infty$ is indeed a norm. Fix a norm $\norm{\cdot}$ on $V$. We reduce the problem into  
+\begin{align*}
+  \vi{\text{ finding $m,M\inr^+$ such that }m\norm{x}_\infty \leq \norm{x}\leq M\norm{x}_\infty}
+\end{align*}
+We first claim 
+\begin{align*}
+\blue{M=\sum \norm{e_i}\text{ suffices }}
+\end{align*}
+Compute 
+\begin{align*}
+\norm{x}= \bnorm{\sum \alpha_ie_i} \leq \sum \abso{\alpha _i} \norm{e_i} \leq \norm{x}_\infty \sum \norm{e_i}= M \norm{x}_\infty \bdone
+\end{align*}
+Reverse triangle inequality give us 
+\begin{align*}
+\Big|\norm{x}-\norm{y}\Big|\leq \norm{x-y} \leq M \norm{x-y}_\infty
+\end{align*}
+This implies that $\norm{\cdot}:\Big(V,\norm{\cdot}_\infty \Big)\rightarrow \R$ is Lipschitz continuous.\\
+
+
+ 
+Define $S\triangleq \set{y \in V: \norm{y}_\infty =1}$ is non-empty. Check that $S$ is compact in $\norm{\cdot}_\infty$ by checking  $S$ is sequentially compact using the fact $\R^{n-1}$ is locally compact.\\
+
+
+Now, by EVT, we know $\min _{y \in S}\norm{y}$ exists. Note that $\min_{y \in S}\norm{y}>0$, since $0 \not\in S$.\\ 
+
+We claim 
+\begin{align*}
+  \olive{m= \min_{y \in S}\norm{y}\text{ suffices }}
+\end{align*}
+Fix $x \in V$. Compute 
+\begin{align*}
+m\norm{x}_\infty = \norm{x}_\infty (\min_{y \in S} \norm{y})\leq \norm{x}_\infty \cdot  \bnorm{ \frac{x}{\norm{x}_\infty}}=\norm{x}\odone \vdone
+\end{align*}
+
+
+
+
+
+
+\end{proof}
+\begin{theorem}
+\label{LmoF}
+\textbf{(Linear map of Finite-dimensional Domain is always Continuous)} Given a finite-dimensional normed space $\mathcal{X}$ over $\R\text{ or }\C$, an arbitrary normed space  $\mathcal{Y}$ over $\R\text{ or }\C$ and a linear transformation  $T:\mathcal{X}\rightarrow \mathcal{Y}$, we have 
+\begin{align*}
+T\text{ is continuous }
+\end{align*}
+\end{theorem}
+\begin{proof}
+Fix $x\in \mathcal{X},\epsilon $. We wish 
+\begin{align*}
+\vi{\text{ to find $\delta$ such that }\forall h\in \mathcal{X}: \norm{h}\leq \delta, \norm{T(x+h)-Tx}\leq \epsilon }
+\end{align*}
+Let $\set{e_1,\dots ,e_n}$ be a basis of $\mathcal{X}$. Note that $ \norm{ \sum \alpha_i e_i }_1: = \sum \abso{\alpha _i}$ is a norm. By \myref{Theorem}{ANoF}, we know $\norm{\cdot}$ and $\norm{\cdot}_1$ are equivalent. Then, we can fix $M\inr^+$ such that 
+\begin{align*}
+\hspace{2cm}\norm{x}_1 \leq M\norm{x}\hspace{0.5cm}(x \in V)
+\end{align*}
+We claim 
+\begin{align*}
+\vi{\delta= \frac{\epsilon }{M(\max \norm{Te_i} )}\text{ suffices }} 
+\end{align*}
+Fix $\norm{h}\leq \delta$ and express $h=\sum \alpha_i e_i$. Compute using linearity of $T$
+\begin{align*}
+  \norm{T(x+h)-Tx}&=\norm{\sum \alpha_i T e_i}\\
+  &\leq \sum \abso{\alpha _i} \norm{Te_i}\\
+  &\leq  \norm{h}_1 (\max \norm{Te_i} )\\
+  &\leq M \norm{h}(\max \norm{Te_i})\leq \epsilon \vdone
+\end{align*}
+\end{proof}
+\begin{mdframed}
+As a corollary of \myref{Theorem}{LOB} and \myref{Theorem}{LmoF}, we now see that, if $\mathcal{X}$ is finite-dimensional, then all linear map of domain $\mathcal{X}$ are bounded. A counter example to the generalization of this statement is followed. 
+\begin{Example}{\textbf{(Differentiation is an Unbounded Linear Operator)}}{}
+\begin{align*}
+\mathcal{X}=\Big(\R[x]|_{[0,1]}, \norm{\cdot}_\infty \Big), D(P)\triangleq P'
+\end{align*}
+Note that $\set{x^n}_{n\inn}$ is bounded in $\mathcal{X}$ and $\set{D(x^n)}_{n\inn}$ is not.   
+\end{Example}
+Now, suppose $\mathcal{X},\mathcal{Y}$ are two fixed normed spaces over $\R$ or $\C$. We can easily check that the set $BL(\mathcal{X},\mathcal{Y})$ of bounded linear operators from $\mathcal{X}$ to $\mathcal{Y}$ form a vector space over whichever field $\mathcal{Y}$ is over.\\
+
+Naturally, our definition of boundedness of linear operator derive us a norm on $BL(\mathcal{X},\mathcal{Y})$, as followed 
+\begin{align}
+\label{tnop}
+\norm{T}_{\text{op}}\triangleq \inf \set{M\inr^+ :\forall x \in \mathcal{X}, \norm{Tx}\leq M\norm{x}}
+\end{align}
+Before we show that our definition is indeed a norm, we first give some equivalent definitions and prove their equivalency. 
+\end{mdframed}
+\begin{theorem}
+\textbf{(Equivalent Definitions of Operator Norm)} Given two fixed normed space $\mathcal{X},\mathcal{Y}$ over $\R$ or  $\C$, a bounded linear operator  $T:\mathcal{X}\rightarrow \mathcal{Y}$, and define $\norm{T}_{\text{op}}$ as in $\hspace{0.5cm}$ (\myref{}{tnop}), we have 
+\begin{align*}
+\norm{T}_{\text{op}}=\sup_{x\in \mathcal{X},x\neq 0} \frac{\norm{Tx}}{\norm{x}}
+\end{align*}
+\end{theorem}
+\begin{proof}
+Define $J=\set{M\inr^+:\forall x \in \mathcal{X},\norm{Tx}\leq M\norm{x}}$, so that we have $\norm{T}_{\text{op}}=\inf J$. Now, observe 
+\begin{align*}
+J&=\set{M\inr^+:M\geq \frac{\norm{Tx}}{\norm{x}},\forall x\neq 0\in \mathcal{X}}\\
+&=\bset{M\inr^+ : M \geq \sup_{x \in \mathcal{X},x\neq 0} \frac{\norm{Tx}}{\norm{x}}}
+\end{align*}
+This let us conclude 
+\begin{align*}
+\norm{T}_\text{op}=\inf J=\sup_{x \in \mathcal{X},x\neq 0} \frac{\norm{Tx}}{\norm{x}}
+\end{align*}
+\end{proof}
+\begin{mdframed}
+It is now easy to see 
+\begin{align}
+  \norm{T}_{\text{op}}&=\sup_{x \in \mathcal{X},x\neq 0} \frac{\norm{Tx}}{\norm{x}}\label{equivdefopnorm1}\\
+&=\sup_{x\in \mathcal{X},\norm{x}=1} \norm{Tx}\label{equivdefopnorm}
+\end{align}
+It is not all in vain to introduce the equivalent definitions. See that the verification of  $\norm{\cdot}_{\text{op}}$ being a norm on $BL(\mathcal{X},\mathcal{Y})$ become simple by utilizing the equivalent definitions. 
+\begin{enumerate}[label=(\alph*)]
+  \item For positive-definiteness, fix non-trivial $T$ and fix $x\in \mathcal{X}\setminus N(T)$. Use (\myref{}{equivdefopnorm1}) to show $\norm{T}_{\text{op}}\geq \frac{\norm{Tx}}{\norm{x}}>0$. 
+  \item For absolute homogenity, use (\myref{}{equivdefopnorm}) and $\norm{Tcx}=\abso{c}\cdot \norm{Tx}$.
+  \item For triangle inequality, use (\myref{}{equivdefopnorm}) and $\norm{(T_1+T_2)x}\leq \norm{T_1x}+\norm{T_2x}$. 
+\end{enumerate}
+Naturally, and very very importantly, (\myref{}{equivdefopnorm1}) give us 
+\begin{align*}
+\hspace{3cm}\norm{Tx}\leq \norm{T}_\text{op}\cdot \norm{x}\hspace{1.5cm}(x\in \mathcal{X})
+\end{align*}
+This inequality will later be the best tool to help analyze the derivatives of functions between Euclidean spaces, and perhaps better, it immediately give us 
+\begin{align*}
+ \frac{\norm{T_1T_2x}}{\norm{x}}\leq \frac{\norm{T_1}_\text{op}\cdot \norm{T_2}_\text{op}\cdot \norm{x}}{\norm{x}}=\norm{T_1}_\text{op}\cdot \norm{T_2}_{\text{op}}
+\end{align*}
+Then (\myref{}{equivdefopnorm1}) give us  
+\begin{align*}
+\norm{T_1T_2}_\text{op}\leq \norm{T_1}_\text{op}\cdot \norm{T_2}_\text{op}
+\end{align*}
+\end{mdframed}
 \chapter{ODE}
 \section{Solution 2}
 \begin{mdframed}
@@ -2859,4 +3556,5 @@ U=\R^2\text{ and }S^2=\set{(x,y,z):x^2+y^2+z^2}
 \end{align*}
 \end{Example}
 \end{mdframed}
+
 \end{document}
