--- a/Advanced Calculus 2/AC 2 note.tex
+++ b/Advanced Calculus 2/AC 2 note.tex
@@ -2668,6 +2668,124 @@ This now implies
 \end{align*}
 
 \end{proof}
+\section{Abel's Theorem and its application}
+\begin{mdframed}
+In this section, we use the notation $\mathbb{S}_M(R)$ to denote \textbf{stolz region}
+\begin{align*}
+\mathbb{S}_M(R)\triangleq \set{z\inc: \frac{\abso{R-z}}{R-\abso{z}}\in (0,M)}
+\end{align*}
+\end{mdframed}
+\begin{theorem}
+\textbf{(Abel's Theorem for Power Series)} Given a complex Maclaurin series $f(z)=\sum_{n=0}^{\infty} c_nz^n$ of convergence radius $R$ such that  
+\begin{align*}
+\sum_{n=0}^{\infty}c_nR^n\text{ converge }
+\end{align*}
+Then for all $M>1$, we have  
+\begin{align*}
+f|_{\mathbb{S}_M(R)}(z)\to \sum_{n=0}^{\infty}c_nR^n=f(R)\text{ as }z\to R 
+\end{align*}
+\end{theorem}
+\begin{proof}
+We first 
+\begin{align*}
+\vi{\text{ prove when }R=1}
+\end{align*}
+Fix $\epsilon $. We wish  
+\begin{align*}
+\vi{\text{ to find $\delta$ such that }\abso{\sum_{n=0}^{\infty}c_nz^n-c_n}<\epsilon \text{ for all }z \in \mathbb{S}_M(1)\cap D_\delta(1)}
+\end{align*}
+To use summation by part, we first fix 
+\begin{align*}
+s_n\triangleq \sum_{k=0}^{n}c_k\text{ and }s\triangleq \lim_{n\to \infty}s_n
+\end{align*}
+Now Use summation by part 
+\begin{align*}
+\sum_{n=0}^k c_nz^n&=\sum_{n=0}^{k}(s_n-s_{n-1})z^n\\
+&=\sum_{n=0}^k s_nz^n - \sum_{n=0}^{k-1} s_nz^{n+1}\\
+&=s_kz^k+(1-z)\sum_{n=0}^{k-1} s_nz^n
+\end{align*}
+Note that 
+\begin{align*}
+  \hspace{1cm}(1-z)\sum_{n=0}^{\infty}z^n=1\hspace{0.5cm}(\abso{z}<1)
+\end{align*}
+This give us 
+\begin{align*}
+\lim_{z\to 1^-}\Big( \sum_{n=0}^{\infty}c_nz^n- \sum_{n=0}^\infty c_n \Big)&= \lim_{z\to 1^-} \Big( \lim_{k\to \infty} s_kz^k  + (1-z)\sum_{n=0}^{k-1} s_nz^n - s\Big)\\
+&=\lim_{z\to 1^-}  (1-z)\sum_{n=0}^{\infty} (s_n-s)z^n\hspace{0.5cm}(\because \forall z\inc:\abso{z}<1, \lim_{k\to \infty}s_kz^k=0)
+\end{align*}
+We reduce the problem into 
+\begin{align*}
+  \vi{\text{ finding }\delta\text{ such that }\abso{(1-z)\sum_{n=0}^{\infty}(s_n-s)z^n}\leq \epsilon \text{ for all }z \in \mathbb{S}_M(1)\cap D_\delta(1)}
+\end{align*}
+Because $s_n \to s$, we know there exists $N$ such that $\abso{s_n-s}<\frac{1}{2M}$ for all $n>N$. We claim 
+\begin{align*}
+\vi{\delta= \frac{\epsilon }{2\sum_{n=0}^N \abso{s_n-s}}\text{ suffices }}
+\end{align*}
+Note that $\sum_{n=0}^{\infty}(s_n-s)z^n$ absolutely converges by direct comparison test. Then we can deduce
+\begin{align*}
+  \abso{(1-z)\sum_{n=0}^{\infty}(s_n-s)z^n}&=  \abso{1-z}\cdot \abso{\sum_{n=0}^{N}(s_n-s)z^n+\sum_{n=N+1}^{\infty}(s_n-s)z^n}\\
+ &\leq \abso{1-z}\Big(\sum_{n=0}^N \abso{s_n-s}+ \frac{\epsilon }{2M} \sum_{n=N+1}^\infty \abso{z}^n \Big)\\
+ &\leq  \frac{\epsilon}{2}+ \frac{\epsilon }{2M} \cdot \frac{\abso{1-z}}{1-\abso{z}} \cdot \abso{z}^{N+1}\leq \epsilon \hspace{0.5cm}(\because \abso{z}<1\text{ and }\frac{\abso{1-z}}{1-\abso{z}}<M)\vdone
+\end{align*}
+We now prove 
+\begin{align*}
+\blue{\text{ when $R\inr^+$ }}
+\end{align*}
+Fix $\epsilon $. We wish 
+ \begin{align*}
+   \blue{\text{ to find }\delta\text{ such that }\abso{\sum_{n=0}^{\infty}c_nz^n-c_nR^n}<\epsilon \text{ for all }z \in \mathbb{S}_M(R)\cap D_\delta(R)}
+\end{align*}
+Fix  
+\begin{align*}
+a_n=c_nR^n\text{ and }g(z)\triangleq \sum_{n=0}^{\infty}a_n z^n=\sum_{n=0}^{\infty}c_nR^nz^n\hspace{0.5cm}(\abso{z}<1)
+\end{align*}
+By premise and \vi{our result}, we know 
+\begin{align*}
+g(1)\text{ exists and there exists $\delta'$ such that }\abso{g(z)-g(1)}<\epsilon \text{ for all $z \in\mathbb{S}_M(1)\cap D_{\delta'}(1)$ }
+\end{align*}
+We claim 
+\begin{align*}
+  \blue{\delta=R\delta'\text{ suffices }}
+\end{align*}
+First note that 
+\begin{align*}
+\frac{\abso{R-z}}{R-\abso{z}}\in (0,M)\implies \frac{\abso{1-\frac{z}{R}}}{1-\abso{\frac{z}{R}}}\in (0,M)
+\end{align*}
+This tell us 
+\begin{align*}
+z\in \mathbb{S}_M(R) \implies \frac{z}{R}\in \mathbb{S}_M(1)
+\end{align*}
+Fix $z\in \mathbb{S}_M(R)\cap D_\delta(R)$. We now have
+\begin{align*}
+\frac{z}{R}\in \mathbb{S}_M(1)\cap D_{\delta'}(1)
+\end{align*}
+This then let us conclude
+\begin{align*}
+\abso{\sum_{n=0}^{\infty}c_nz^n-c_nR^n}&=\abso{g(\frac{z}{R})-g(1)}<\epsilon \bdone
+\end{align*}
+\end{proof}
+\begin{mdframed}
+\begin{Example}{\textbf{(Identity of $\ln$ derived from Abel's Theorem)}}{}
+\begin{align*}
+  \ln (1+x)=\sum_{n=1}^{\infty} (-1)^{n-1} \frac{x^n}{n}\text{ for all $x \in (-1,1]$ }
+\end{align*}
+Check that both side satisfy $y'=\frac{1}{1+x}$, and $y(0)=0$. This tell us that two sides equal on  $(-1,1)$. Now using Abel's Theorem and the continuity of $\ln$, we have 
+\begin{align*}
+\ln 2= \sum_{n=1}^{\infty} (-1)^{n-1} \frac{1}{n}
+\end{align*}
+\end{Example}
+\begin{Example}{\textbf{($1-1+1-1+\cdots=\frac{1}{2}$)}}{}
+\begin{align*}
+1-1+1-1+\cdots = \frac{1}{2}\text{ is WRONG!!! }
+\end{align*}
+When people say: "$1-1+1-1+\cdots =\frac{1}{2}$", they mean the sum of the series in the sense of Abel. Compute the Macularin series of $\frac{1}{1+r}$
+\begin{align*}
+\frac{1}{1+r}=\sum_{n=0}^{\infty}(-1)^nr^n
+\end{align*}
+Check both side do equal on $(-1,1)$ by direct computation. Apply Abel's Theorem to see the magic. 
+\end{Example}
+\end{mdframed}
+
 \chapter{Calculus in Euclidean Space}
 \section{Operator Norm}
 \begin{mdframed}
@@ -2683,9 +2801,8 @@ The proof of equivalency is simple. For $(\longrightarrow )$, let $E\triangleq \
 \end{align*}
 For $(\longleftarrow)$, just observe $\norm{Tx-Ty}=\norm{T(x-y)}\leq M\norm{x-y}$.\\
 
-Two chapters ago, we drew the connection between concept of boundedness and concept of continuity by showing a continuous function between metric spaces must map a bounded set to another bounded set.\\
 
-Here, we show this connection is even deeper in the case of linear transformation by proving that a linear transformation is continuous if and only if it is bounded. (\myref{Theorem}{LOB}) 
+We first show that a linear transformation is continuous if and only if it is bounded. (\myref{Theorem}{LOB}) 
 \end{mdframed}
 \begin{theorem}
 \label{LOB}
@@ -2731,7 +2848,7 @@ We say two metric $d_1,d_2$ on  $X$ are  \textbf{topologically equivalent} if th
 
 A few properties can be immediately spotted.  
 \begin{enumerate}[label=(\alph*)]
-  \item Our definition of $\sim$ between metrics of a fixed $X$ is an equivalence relation.\\
+  \item Our definition of $\sim$ between metrics of a fixed $X$ is an equivalence relation.
   \item Our definition of $\sim$ between norms on a fixed $V$ is an equivalence relation.
   \item Equivalent norms induce equivalent metrics.
   \item Equivalent metrics are topologically equivalent. 
@@ -2771,7 +2888,7 @@ This implies that $\norm{\cdot}:\Big(V,\norm{\cdot}_\infty \Big)\rightarrow \R$ 
 
 
  
-Define $S\triangleq \set{y \in V: \norm{y}_\infty =1}$ is non-empty. Check that $S$ is compact in $\norm{\cdot}_\infty$ by checking  $S$ is sequentially compact using the fact $\R^{n-1}$ is locally compact.\\
+Note that $S\triangleq \set{y \in V: \norm{y}_\infty =1}$ is non-empty. Check that $S$ is compact in $\norm{\cdot}_\infty$ by checking  $S$ is sequentially compact using the fact $\R^{n-1}$ is locally compact.\\
 
 
 Now, by EVT, we know $\min _{y \in S}\norm{y}$ exists. Note that $\min_{y \in S}\norm{y}>0$, since $0 \not\in S$.\\ 
@@ -2830,27 +2947,213 @@ Note that $\set{x^n}_{n\inn}$ is bounded in $\mathcal{X}$ and $\set{D(x^n)}_{n\i
 Now, suppose $\mathcal{X},\mathcal{Y}$ are two fixed normed spaces over $\R$ or $\C$. We can easily check that the set $BL(\mathcal{X},\mathcal{Y})$ of bounded linear operators from $\mathcal{X}$ to $\mathcal{Y}$ form a vector space over whichever field $\mathcal{Y}$ is over.\\
 
 Naturally, our definition of boundedness of linear operator derive us a norm on $BL(\mathcal{X},\mathcal{Y})$, as followed 
-\begin{align*}
-\norm{T}\triangleq \inf \set{M\inr^+ :\forall x \in \mathcal{X}, \norm{Tx}\leq M\norm{x}}
-\end{align*}
-The verification of our definition of $\norm{\cdot}$ on $BL(\mathcal{X},\mathcal{Y})$ is simple, the tricks are 
-\begin{enumerate}[label=(\alph*)]
-  \item For positive-definiteness, try to prove the contraposition. Fix non-trivial $T$ and fix $x\in \mathcal{X}\setminus N(T)$. Show $\norm{T}\geq \frac{\norm{Tx}}{\norm{x}}>0$. 
-\end{enumerate}
+\begin{align}
+\label{tnop}
+\norm{T}_{\text{op}}\triangleq \inf \set{M\inr^+ :\forall x \in \mathcal{X}, \norm{Tx}\leq M\norm{x}}
+\end{align}
+Before we show that our definition is indeed a norm, we first give some equivalent definitions and prove their equivalency. 
 \end{mdframed}
+\begin{theorem}
+\textbf{(Equivalent Definitions of Operator Norm)} Given two fixed normed space $\mathcal{X},\mathcal{Y}$ over $\R$ or  $\C$, a bounded linear operator  $T:\mathcal{X}\rightarrow \mathcal{Y}$, and define $\norm{T}_{\text{op}}$ as in (\myref{}{tnop}), we have 
+\begin{align*}
+\norm{T}_{\text{op}}=\sup_{x\in \mathcal{X},x\neq 0} \frac{\norm{Tx}}{\norm{x}}
+\end{align*}
+\end{theorem}
+\begin{proof}
+Define $J=\set{M\inr^+:\forall x \in \mathcal{X},\norm{Tx}\leq M\norm{x}}$, so that we have $\norm{T}_{\text{op}}=\inf J$. Now, observe 
+\begin{align*}
+J&=\set{M\inr^+:M\geq \frac{\norm{Tx}}{\norm{x}},\forall x\neq 0\in \mathcal{X}}\\
+&=\bset{M\inr^+ : M \geq \sup_{x \in \mathcal{X},x\neq 0} \frac{\norm{Tx}}{\norm{x}}}
+\end{align*}
+This let us conclude 
+\begin{align*}
+\norm{T}_\text{op}=\inf J=\sup_{x \in \mathcal{X},x\neq 0} \frac{\norm{Tx}}{\norm{x}}
+\end{align*}
+\end{proof}
+\begin{mdframed}
+It is now easy to see 
+\begin{align}
+  \norm{T}_{\text{op}}&=\sup_{x \in \mathcal{X},x\neq 0} \frac{\norm{Tx}}{\norm{x}}\label{equivdefopnorm1}\\
+&=\sup_{x\in \mathcal{X},\norm{x}=1} \norm{Tx}\label{equivdefopnorm}
+\end{align}
+It is not all in vain to introduce the equivalent definitions. See that the verification of  $\norm{\cdot}_{\text{op}}$ being a norm on $BL(\mathcal{X},\mathcal{Y})$ become simple by utilizing the equivalent definitions. 
+\begin{enumerate}[label=(\alph*)]
+  \item For positive-definiteness, fix non-trivial $T$ and fix $x\in \mathcal{X}\setminus N(T)$. Use (\myref{}{equivdefopnorm1}) to show $\norm{T}_{\text{op}}\geq \frac{\norm{Tx}}{\norm{x}}>0$. 
+  \item For absolute homogenity, use (\myref{}{equivdefopnorm}) and $\norm{Tcx}=\abso{c}\cdot \norm{Tx}$.
+  \item For triangle inequality, use (\myref{}{equivdefopnorm}) and $\norm{(T_1+T_2)x}\leq \norm{T_1x}+\norm{T_2x}$. 
+\end{enumerate}
+Naturally, and very very importantly, (\myref{}{equivdefopnorm1}) give us 
+\begin{align*}
+\hspace{3cm}\norm{Tx}\leq \norm{T}_\text{op}\cdot \norm{x}\hspace{1.5cm}(x\in \mathcal{X})
+\end{align*}
+This inequality will later be the best tool to help analyze the derivatives of functions between Euclidean spaces, and perhaps better, it immediately give us 
+\begin{align*}
+ \frac{\norm{T_1T_2x}}{\norm{x}}\leq \frac{\norm{T_1}_\text{op}\cdot \norm{T_2}_\text{op}\cdot \norm{x}}{\norm{x}}=\norm{T_1}_\text{op}\cdot \norm{T_2}_{\text{op}}
+\end{align*}
+Then (\myref{}{equivdefopnorm1}) give us  
+\begin{align*}
+\norm{T_1T_2}_\text{op}\leq \norm{T_1}_\text{op}\cdot \norm{T_2}_\text{op}
+\end{align*}
+\end{mdframed}
+\section{Chain Rule}
+\begin{mdframed}
+Given two normed space $\mathcal{X},\mathcal{Y}$, suppose $f$ maps an open neighborhood $O$ around $x$ in $\mathcal{X}$ to $\mathcal{Y}$. We say $f$ is \textbf{differentiable at} $x$ if there exists a bounded linear transformation $A_x:\mathcal{X}\rightarrow \mathcal{Y}$ (from now, $A_x$ will be denoted $df_x$) such that  
+\begin{align}
+\label{defdi}
+  \lim_{h\to 0} \frac{\norm{f(x+h)-f(x)-df_x(h)}_\mathcal{Y}}{\norm{h}_\mathcal{X}}=0
+\end{align}
+Immediately, we should check that the linear approximation is unique. Suppose $df_x$ and  $df_x'$ both satisfy (\myref{}{defdi}). We are required to show $(df_x-df_x')h=0$ for all $\norm{h}_\mathcal{X}=1$. Fix $h\in \mathcal{X}$ such that $\norm{h}_\mathcal{X}=1$. Note that 
+\begin{align*}
+ \frac{(df_x-df'_x)th}{t}\text{ is a constant in $t$ for $t\neq 0$ }
+\end{align*}
+This then reduced the problem into showing 
+\begin{align}
+\label{goaldib}
+\frac{(df_x-df'_x)th}{t\norm{h}_{\mathcal{X}}}\to 0\text{ as $t\to 0$ }
+\end{align}
+Observe 
+\begin{align*}
+  (df_x-df'_x)th&= \Big( f(x+th)-f(x)-df'_x(th)\Big) - \Big(f(x+th)-f(x)-df_x(th) \Big)
+\end{align*}
+which implies 
+\begin{align*}
+\norm{(df_x-df_x')th}_\mathcal{Y}\leq \norm{f(x+th)-f(x)-df'_x(th)}_{\mathcal{Y}}+ \norm{f(x+th)-f(x)-df_x(th)}_\mathcal{Y}
+\end{align*}
+and thus implies (\myref{}{goaldib}).\\
+
+It shall be quite clear that a function $f$ differentiable at $x$ must be continuous at $x$, by noting the nominator of (\myref{}{defdi}) must tend to $0$.\\
+
+We now prove the Chain Rule for function between normed space. 
+\end{mdframed}
+\begin{theorem}
+\textbf{(Chain Rule)} Given three normed space $\mathcal{X},\mathcal{Y},\mathcal{Z}$, a point $x \in \mathcal{X}$, a function $g$ that map an open set $U\subseteq \mathcal{Y}$ containing $f(x)$ into $\mathcal{Z}$, a function $f$ that map an open-neighborhood around $x$ into $U$ such that 
+\begin{enumerate}[label=(\alph*)]
+  \item $f$ is differentiable at $x$
+   \item $g$ is differentiable at $f(x)$
+\end{enumerate}
+we have 
+\begin{align*}
+d(g\circ f)_x=dg_{f(x)}\circ df_{x}
+\end{align*}
+\end{theorem}
+\begin{proof}
+For brevity, we use $F\triangleq g\circ f$. We wish to prove 
+\begin{align*}
+\vi{\lim_{h\to 0}\frac{\norm{F(x+h)-F(x)-dg_{f(x)}df_x(h)}_\mathcal{Z}}{\norm{h}_\mathcal{X}}=0}
+\end{align*}
+Fix $k\triangleq f(x+h)-f(x)$. Observe 
+\begin{align*}
+ F(x+h)-F(x)-dg_{f(x)}df_x(h)=\Big(g\big(f(x)+k\big)-g\big(f(x)\big)- dg_{f(x)}(k) \Big) + dg_{f(x)}\big(k-df_x(h)\big)
+\end{align*}
+This now implies 
+\begin{align*}
+&\frac{\norm{F(x+h)-F(x)-dg_{f(x)}df_x(h)}_\mathcal{Z}}{\norm{h}_\mathcal{X}}\text{ is smaller than }
+\end{align*}
+\begin{align*}
+\frac{\norm{g\big(f(x)+k\big)-g\big(f(x)\big)- dg_{f(x)}(k) }_Z+ \norm{dg_{f(x)}\big(k-df_x(h)\big)}_\mathcal{Z}}{\norm{h}_\mathcal{X}} 
+\end{align*}
+This let us reduce the problem into proving 
+\begin{align*}
+  &\olive{ \lim_{h\to 0}\frac{\norm{g\big(f(x)+k\big)-g\big(f(x)\big)- dg_{f(x)}(k) }_Z }{\norm{h}_\mathcal{X}} =0}\\
+  \text{ and }&\blue{\lim_{h\to 0} \frac{\norm{dg_{f(x)}\big(k-df_x(h) \big)}_\mathcal{Z}}{\norm{h}_\mathcal{X}}=0}
+\end{align*}
+We first prove 
+\begin{align*}
+\olive{ \lim_{h\to 0}\frac{\norm{g\big(f(x)+k\big)-g\big(f(x)\big)- dg_{f(x)}(k) }_Z }{\norm{h}_\mathcal{X}} =0}
+\end{align*}
+Note that if $\norm{k}_\mathcal{Y}=0$, we have 
+\begin{align*}
+\frac{\norm{g\big(f(x)+k\big)-g\big(f(x)\big)- dg_{f(x)}(k) }_Z }{\norm{h}_\mathcal{X}} =0
+\end{align*}
+Now, observe that 
+\begin{align*}
+\frac{\norm{g\big(f(x)+k\big)-g\big(f(x)\big)- dg_{f(x)}(k) }_Z }{\norm{h}_\mathcal{X}} = \frac{\norm{g\big(f(x)+k\big)-g\big(f(x)\big)- dg_{f(x)}(k) }_Z }{\norm{k}_\mathcal{Y}}\cdot \frac{\norm{k}_\mathcal{Y}}{\norm{h}_\mathcal{X}} 
+\end{align*}
+Because $h \to 0 \implies k\to 0$, we can now reduce the problem into proving 
+\begin{align*}
+\olive{\limsup_{h\to 0} \frac{\norm{k}_\mathcal{Y}}{\norm{h}_\mathcal{X}}\text{ exists }}
+\end{align*}
+Observe 
+\begin{align*}
+\frac{\norm{k}_\mathcal{Y}}{\norm{h}_\mathcal{X}}&= \frac{\norm{f(x+h)-f(x)-df_x(h)+df_x(h)}_\mathcal{X}}{\norm{h}_\mathcal{X}}\\
+&\leq \frac{\norm{f(x+h)-f(x)-df_x(h)}_\mathcal{Y}}{\norm{h}_\mathcal{X}}+\frac{\norm{df_x(h)}_\mathcal{Y}}{\norm{h}_\mathcal{X}}\\
+&\leq \frac{\norm{f(x+h)-f(x)-df_x(h)}_\mathcal{Y}}{\norm{h}_\mathcal{X}} + \norm{df_x}_\text{op} \odone
+\end{align*}
+We now prove 
+\begin{align*}
+\blue{\lim_{h\to 0} \frac{\norm{dg_{f(x)}\big(k-df_x(h) \big)}_\mathcal{Z}}{\norm{h}_\mathcal{X}}=0}
+\end{align*}
+Note that if $f(x+h)-f(x)-df_x(h)=0$, then $\norm{dg_{f(x)}\big(k-df_x(h) \big)}_\mathcal{Z}=0$. Now, observe 
+\begin{align*}
+\frac{\norm{dg_{f(x)}\big(k-df_x(h) \big)}_\mathcal{Z}}{\norm{h}_\mathcal{X}}&= \frac{\norm{dg_{f(x)}\big(f(x+h)-f(x)-df_x(h) \big)}_\mathcal{Z}}{\norm{f(x+h)-f(x)-df_x(h)}_\mathcal{Y}}\cdot \frac{\norm{f(x+h)-f(x)-df_x(h)}_\mathcal{Y}}{\norm{h}_\mathcal{X}}\\
+&\leq \norm{dg_{f(x)}}_\text{op}\cdot \frac{\norm{f(x+h)-f(x)-df_x(h)}_\mathcal{Y}}{\norm{h}_\mathcal{X}}\to 0 \bdone
+\end{align*}
+\end{proof}
+\begin{mdframed}
+Interestingly, if $f:\Big(\R,\norm{\cdot}_2 \Big)\rightarrow \Big(\R^n , \norm{\cdot}_2\Big)$ is a curve in $\R^n$ 
+\begin{align*}
+f(t)=(f_1(t),\cdots , f_n(t))
+\end{align*}
+and we define 
+\begin{align*}
+f'(t)\triangleq (f_1'(t),\cdots ,f_n'(t))
+\end{align*}
+We have 
+\begin{align*}
+\abso{f'(t)}= \norm{df_t}_{\text{op}}
+\end{align*}
+This give us the following expected result (\myref{Corollary}{BPoD}). 
+\end{mdframed}
+\begin{theorem}
+\textbf{(Basic Property of Derivative)} Suppose $f$ maps a convex open set $E\subseteq \Big(\R^n,\norm{\cdot}_2 \Big)$ into $\Big(\R^m,\norm{\cdot}_2 \Big)$,  $f$ is differentiable on $E$, and there exists $M\inr$ such that 
+\begin{align*}
+\hspace{2.5cm}\norm{df_x}_\text{op}\leq M\hspace{1.5cm}(x \in E)
+\end{align*}
+Then for all $a,b \in E$, we have
+\begin{align*}
+\abso{f(b)-f(a)}\leq M \abso{b-a}
+\end{align*}
+\end{theorem}
+\begin{proof}
+Define $\gamma:[0,1]\rightarrow E$ by 
+\begin{align*}
+\gamma (t)\triangleq a+(b-a)t
+\end{align*}
+Now, note that 
+\begin{align*}
+\abso{f(b)-f(a)}&= \abso{(f\circ \gamma )(1)-(f\circ \gamma )(0)}\\
+&= \abso{\int_0^ 1(f\circ \gamma )'(t)dt}\\
+&\leq \int_0^1 \abso{(f\circ \gamma )'(t)}dt\\
+&=\int_0^1 \norm{d(f\circ \gamma )_t}_\text{op}dt\\
+&\leq \int_0^1 \norm{df_{\gamma (t)}}_\text{op}\cdot \norm{d\gamma_t}_\text{op}dt\\
+&=\int_0^1 M\cdot \abso{b-a}dt=M\abso{b-a}
+\end{align*}
+\end{proof}
+\begin{corollary}
+\label{BPoD}
+\textbf{(Basic Property of Derivative)} Suppose $f$ maps a convex open set $E\subseteq \Big(\R^n,\norm{\cdot}_2 \Big)$ into $\Big(\R^m,\norm{\cdot}_2 \Big)$, $f$ is differentiable on $E$, and $df_x=0$ for all $x\in E$, then
+\begin{align*}
+f\text{ stay constant on $E$ }
+\end{align*}
+\end{corollary}
+
+
+
+
+
+
 \section{Differentiability Theorem}
 \begin{mdframed}
 
 
-Given two normed space $V,W$, suppose $f$ maps an open neighborhood $O$ around $x$ in $V$ to $W$. We say $f$ is \textbf{differentiable at} $x$ if there exists a linear transformation $A_x:V\rightarrow W$ (from now, $A_x$ will be denoted $df_x$) such that the remainder $f(x+h)$of the local approximation $df_x$ satisfy 
+Suppose $W$ is equipped with an inner product. Given a function $f:E\rightarrow W$ and an orthonormal basis $\set{e_\ld}$ of $W$, depending on over $\R\text{ or }\C$, the notation $f_j$ represent a function from $E$ to  $\R\text{ or }\C$ defined by $f_j(x)=\langle f(x),e_j\rangle_W$.\\
+
+
+
+Given a function $f:V \to \R$ and a normal vector $e_i\in V$, the \textbf{partial derivative} $\partial_if:V \to \R$ is defined by 
 \begin{align*}
-  \lim_{h\to 0} \frac{\norm{f(x+h)-f(x)-df_x(h)}_W}{\norm{h}_V}=0
+\partial_i f(x)=\lim_{t\to 0} \frac{f(x+te_i)-f(x)}{t}
 \end{align*}
-Given a function $f:\R^n \to \R$ and a normal vector $e_i\inr^m$, the \textbf{partial derivative} $\partial_if:\R^n \to \R$ is defined by 
-\begin{align*}
-\partial_i f(x)=\lim_{t\to 0} \frac{f(x+te_j)-f(x)}{t}
-\end{align*}
-Given a function $f:E\rightarrow \R^m$ and an orthonormal basis $\set{e_\ld}$ of $\R^m$, we use  $f_j$ to denote $f\cdot e_j $.
 
 
 \end{mdframed}
@@ -2949,7 +3252,7 @@ We have
 \end{align*}
 By \myref{Theorem}{DiJ} (Derivative is Jacobian), if $f$ is differentiable at $0$, then  $df_0$ must be trivial. Yet  
 \begin{align*}
-\frac{\abso{f(h,h)-f(0)-df_0(h,h)}}{\abso{(h,h)}}=\frac{\abso{h}\sqrt{2} }{\abso{h}\sqrt{2} }\to 1
+\frac{\abso{f(h,h)-f(0)-df_0(h,h)}}{\abso{(h,h)}}=\frac{h }{2\abso{h} }\not\to 0 
 \end{align*}
 Note that $f$ is continuous at  $0$, by observing 
 \begin{align*}
@@ -2962,24 +3265,59 @@ which implies
 \end{Example}
 \end{mdframed}
 \begin{mdframed}
-On the space $L(V,W)$ of linear transformations from $V$ to $W$, we can define a norm by 
+Given two normed space $\mathcal{X},\mathcal{Y}$, and an open $E\subseteq \mathcal{X}$, we say $f:E\rightarrow \mathcal{Y}$ is \textbf{continuously differentiable } on $\mathcal{Y}$ if the map $D:(E,\norm{\cdot}_\mathcal{X})\rightarrow \Big(BL(\mathcal{X},\mathcal{Y}), \norm{\cdot}_\text{op} \Big)$ defined by 
 \begin{align*}
-\norm{A}=\sup_{\norm{x}_V\leq 1} \norm{Ax}_W
+D(x)=df_x
 \end{align*}
-Check that this norm on $L(V,W)$ indeed satisfy the axioms.\\
-
-We say $f:E\subseteq V\rightarrow W$ is \textbf{continuously differentiable} at limit point $y\in E$ if 
-\begin{align*}
-x\mapsto df_x\text{ is a continuous at $y$ }
-\end{align*}
-Note that the definition coincide when $V=W=\R$ and $df_x$ is just  $h\mapsto f'(x)h$.  
+is continuous. Note that the definition of the term "continuously differentiable" coincide when $\mathcal{X}=\mathcal{Y}=\R$ and $df_x$ is just $h\mapsto f'(x)h$.  
 \end{mdframed}
 \begin{theorem}
-\textbf{(Differentiability Theorem)} Suppose  $\alpha =\set{e_1,\dots ,e_n}$ is an orthonormal basis of $\R^n$, and $\beta =\set{q_1,\dots ,q_m}$ is an orthonormal basis of  $\R^m$. Suppose  $f$ maps an open set $O\subseteq\R^n$ to $\R^m$.  Then  
+\textbf{(Differentiability Theorem)} Suppose  $\alpha =\set{e_1,\dots ,e_n}$ is an orthonormal basis of $\R^n$, and $\beta =\set{q_1,\dots ,q_m}$ is an orthonormal basis of  $\R^m$. Suppose  $f$ maps an open set $E\subseteq\R^n$ to $\R^m$.  Then  
 \begin{align*}
-f\text{ is continuously differentiable on $O$ }\iff \partial_if_j\text{ exists and is continuous on $O$ for all $i,j$ }
+f\text{ is continuously differentiable on $E$ }\iff \partial_if_j\text{ exists and is continuous on $E$ for all $i,j$ }
 \end{align*}
 \end{theorem}
+\begin{proof}
+$(\longrightarrow)$\\
+
+Fix $i,j$. We wish to show 
+ \begin{align*}
+\vi{\text{ $\partial_if_j$ exists and is continuous on $E$ }}
+\end{align*}
+Because $f$ is differentiable on $E$, we know  $\partial_i f_j$ exists on $E$. (\myref{Theorem}{DiJ}). Fix $x \in E$. We only have to show 
+\begin{align*}
+  \vi{\partial_i f_j\text{ is continuous at $x$ }}
+\end{align*}
+Fix $\epsilon $. We wish 
+\begin{align*}
+\vi{\text{ to find }\delta\text{ such that } \abso{\partial_i f_j(y)-\partial_i f_j(x)}\leq \epsilon \text{ for all $\abso{y-x}<\delta$ }}
+\end{align*}
+Because $f$ is continuously differentaible at $x$, we know there exists  $\delta$ such that 
+\begin{align*}
+\norm{df_y-df_x}_\text{op}< \epsilon \text{ for all $\abso{y-x}\leq \delta$ }
+\end{align*}
+We claim 
+\begin{align*}
+\vi{\text{ such $\delta$ suffices }}
+\end{align*}
+By \myref{Theorem}{DiJ} (Derivative is Jacobian), we know
+\begin{align*}
+\partial_i f_j(y)-\partial_i f_j(x)=(df_y-df_x)e_i \cdot q_j
+\end{align*}
+By Cauchy-Inequality, we then have 
+\begin{align*}
+  \abso{\partial_i f_j(y)-\partial_if_j(x)}&\leq \abso{(df_y-df_x)e_i}\\
+  &\leq \norm{df_y-df_x}_\text{op}<\epsilon \vdone
+\end{align*}
+
+$(\longleftarrow)$\\
+
+
+
+
+
+
+\end{proof}
 
 
 
@@ -2997,11 +3335,15 @@ f\text{ is a diffeomorphism from $U$ to  $V$}
 \end{align*}
 \end{theorem}
 \section{Implicit Function Theorem}
-\section{Linear Algebra Review}
+\section{Appendix: Linear Algebra}
 \begin{mdframed}
-This section give an 
+This section contains
 \begin{enumerate}[label=(\alph*)]
-  \item 
+  \item definitions and basic property for \textbf{norm}
+  \item definitions and basic property for \textbf{inner product}
+  \item definitions and basic property of \textbf{positive semi-definite Hermitian form}
+  \item full statement and proof of \textbf{Cauchy Schwarz Inequality} for both inner product space and positive semi-definite Hermitian form  
+  \item statement and proof of \textbf{SVD} (singular value decomposition). 
 \end{enumerate}
 \end{mdframed}
 \textbf{(Norm Axiom Part)}
@@ -3178,9 +3520,10 @@ Note that if you define $\langle \cdot,\cdot\rangle $ on the space of $n$-tuples
 \begin{align*}
   \langle  (x_1,\dots,x_n)  ,(y_1,\dots ,y_n)\rangle=2 \sqrt{\sum_{k=1}^n (y_k-x_k)^2} 
 \end{align*}
-Then, the space of $n$-tuple is clearly not a concrete Euclidean space, but a Euclidean space. 
+Then, the space of $n$-tuple is clearly not a concrete Euclidean space, and clearly an Euclidean space. 
 
 \end{mdframed}
+\textbf{(SVD)}
 
 \chapter{Beauty}
 \section{Euler's Formula}
@@ -3365,7 +3708,11 @@ Using induction, it is now easy to see
 \begin{theorem}
 \textbf{(Second Characterization)}
 \end{theorem}
-\section{Equivalent Definition of Trigonometric Functions}
+\section{Alternative Definition for $\sin$ and $\cos$}
+\section{Fundamental Theorem of Algebra}
+\begin{theorem}
+\textbf{(Fundamental Theorem of Algebra)}
+\end{theorem}
 
 
 
